Refactoring the code and adding README

--- a/alert_visualization/templates/index.html
+++ b/alert_visualization/templates/index.html
@@ -183,8 +183,7 @@
                            <!-- Card Body -->
                            <div class="card-body">
                               <div class="chart-area">
-                                 <!-- <img src="images/alert_count.png" alt="" /> -->
-                                 <img src="https://user-images.githubusercontent.com/43414928/200388822-d7de3c42-5141-413c-b663-62125e91dbd6.png" alt="" width="650" height="450" />
+                                 <img src="images/alert_count.png" alt="" />
                               </div>
                            </div>
                         </div>
@@ -199,8 +198,7 @@
                            </div>
                            <div class="card-body">
                               <div class="chart-area">
-                                 <img src="https://user-images.githubusercontent.com/43414928/200386846-b0c441c2-8244-497b-b17d-dd2a88f8c4c6.png" alt="" width="400" height="450" />
-                                 <!-- <img src="images/alert_frqeuncy.png" alt="" /> -->
+                                 <img src="images/alert_frqeuncy.png" alt="" />
                               </div>
                            </div>
                         </div>
